@@ -1,5 +1,7 @@
 === HEAD
 
+* Add Model.default_foreign_key, a private class method that allows changing the default foreign key that Sequel will use in associations (jeremyevans)
+
 * Cache negative lookup when eagerly loading many_to_one associations (jeremyevans)
 
 * Make all associations support the :select option, not just many_to_many (jeremyevans)
